2007-08-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-imap4URLString]): removed overriden method (see below).

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder -aclUsers]):
	cache the mailbox acl.
	([SOGoMailFolder -aclsForUser:uid]): cache the mailbox acl.
	([SOGoMailFolder -setRoles:rolesforUser:uid]): reset the mailbox
	acl cache.
	([SOGoMailFolder -httpURLForAdvisoryToUser:uid]): modified to use
	the new method of determining the users mail accounts.

	* SoObjects/Mailer/SOGoMailBaseObject.m ([-imap4URLString]): no
	longer adds a "/" at the end of the string (the default for
	folders), therefore this will be overriden in SOGoMailFolder
	rather than in SOGoMailObject.

	* UI/MailerUI/UIxMailListView.m ([-expungeAction]): removed
	method, moved into the new UIxMailActions module class.

	* SoObjects/Mailer/SOGoDraftsFolder.m ([SOGoDraftsFolder
	-newDraft]): new method that returns a new SOGoDraftObject
	instance with a unique filename based on the current timestamp and
	the "newDraft" prefix.
	([SOGoDraftsFolder
	-lookupName:nameinContext:localContextacquire:acquire]): overriden
	method by detecting local drafts with their "newDraft" prefix.
	([SOGoDraftsFolder -isInDraftsFolder]): returns YES.

	* SoObjects/Mailer/SOGoDraftsFolder.[hm]: rewrote class module
	from scratch by making it a subclass of SOGoMailFolder.

	* UI/MailerUI/UIxMailReplyAction.m: removed obsolete class
	module.

	* UI/MailerUI/UIxMailForwardAction.m: removed obsolete class
	module.

	* UI/MailerUI/UIxMailEditorAction.[hm]: removed obsolete class
	module.

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject -init]):
	new method, initializing the new ivars: IMAP4ID, headers, text,
	sourceURL and sourceFlag.
	([-spoolFileManager], [SOGoDraftObject -userSpoolFolderPath])
	([-_ensureUserSpoolFolderPath])
	([-saveMimeMessageToTemporaryFileWithHeaders:])
	([SOGoDraftObject -mimeMessageWithHeaders:_headers])